Added img to pdf card

--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
         <div class="card" onclick="location.href='PDF-Merger.html'">
             PDF Merger
         </div>
+        <div class="card" onclick="location.href='img-to-pdf.html'">
+            IMG TO PDF
+        </div>
     </div>
     <script>
         const themeToggle = document.getElementById('themeToggle');
